<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="16dp"/>

    <ImageView
        android:id="@+id/topImage"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:src="@drawable/mireagerb"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp" />


    <EditText
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/IRIColour"
        android:textColor="@android:color/white"/>

    <ImageView
        android:id="@+id/bottomImage"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/irilogo"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/author_info"
        android:layout_marginTop="50dp"
        android:textColor="@color/IRIColour"/>
</LinearLayout>
